# atlaversity

./: .gitignore  Mage.py  OrderEditor.py  README.md  SkillLevel.py  StudyTable.py  Turn.py  atlaversity.py  messages.py  pyproject.toml  requirements.txt
src/atlaversity/: CommandLine.py  Config.py  Game.py  Logging.py  Mage.py  MageTable.py  OrderEditor.css  OrderEditor.py  Prompt.py  Skill.py  StudyTable.py  Turn.py  ValueSelector.py  __init__.py  __main__.py  atlaversity.py  mages-plan.backup  messages.py
src/atlaversity/editor/: CommandLine.py  OrderEditor.css  OrderEditor.py  Prompt.py  StudyTable.py  ValueInput.py  ValueSelector.py
src/atlaversity/game/: Game.py  Mage.py  Skill.py  Turn.py
src/atlaversity/utils/: Config.py  Logging.py
tests/: incorrect_factions.toml  incorrect_start_turn.toml  missing_factions.toml  missing_start_turn.toml  test_CommandLine.py  test_Config.py  test_Game.py  test_Mage.py  test_Skill.py  test_SkillLevel.py  test_Turn.py
