[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atlaversity"
version = "0.1.0"
description = "Study aid for Atlantis PBEM game."
readme = "README.md"
authors = [
  {name = "Henrik Kurelid", email = "henrik@kurelid.se"}
]
maintainers = [
  {name = "Henrik Kurelid", email = "henrik@kurelid.se"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3"
]
license = {file = "LICENSE"}
dependencies = [
  
]

[project.optional-dependencies]
dev = [
    "pytest",  # testing
]

[project.urls]
bugs = "https://github.com/rmstdope/atlaversity/issues"
changelog = "https://github.com/rmstdope/atlaversity/blob/master/changelog.md"
homepage = "https://github.com/rmstdope/atlaversity"

[tool.setuptools]
package-dir = {"" = "src/atlaversity"}

[tool.setuptools.package-data]
"*" = ["*.*"]

[tool.pytest.ini_options]
pythonpath = [
  ".", "src/atlaversity",
]
