[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atlaversity"
version = "0.1.1"
description = "Study aid for Atlantis PBEM game."
readme = "README.md"
authors = [{ name = "Henrik Kurelid", email = "henrik@kurelid.se" }]
maintainers = [{ name = "Henrik Kurelid", email = "henrik@kurelid.se" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3"
]
license = { file = "LICENSE" }
requires-python = ">= 3.8"
dependencies = ["prompt_toolkit==3.0.48", "textual==0.82.0"]

[project.optional-dependencies]
dev = [
  "pytest", # testing

]

[project.urls]
bugs = "https://github.com/rmstdope/atlaversity/issues"
homepage = "https://github.com/rmstdope/atlaversity"

[tool.setuptools]
package-dir = { "" = "src/atlaversity" }

[tool.setuptools.package-data]
"*" = ["*.*"]

[tool.pytest.ini_options]
pythonpath = [".", "src/atlaversity"]
